Fixed spacing of related products carousel

--- a/client/src/components/Related Items/Related Products Carousel/styles.css
+++ b/client/src/components/Related Items/Related Products Carousel/styles.css
@@ -1,7 +1,9 @@
 .carousel {
-  width: 80%;
+  width: 90%;
 	height: 425px;
 	background-color: rgb(255, 255, 255);
+	margin-left: 5%;
+	margin-right: 5%;
 }
 
 .innerCarousel {
